src/objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>Advance_is_for_Declining_Sales__c</fullName>
        <label>Advance is for Declining Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advance_is_for_Vendor_Invoice_60_days__c</fullName>
        <label>Advance is for Vendor Invoice &gt; 60 days</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_1_FICO__c</fullName>
        <label>Applicant #1 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_2_FICO__c</fullName>
        <label>Applicant #2 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAM__c</fullName>
        <label>BAM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bankruptcies__c</fullName>
        <label>Bankruptcies</label>
        <picklist>
            <picklistValues>
                <fullName>Dismissed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged = to or &lt; 1 yr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Closing_for_Renovation__c</fullName>
        <label>Business Closing for Renovation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_ZIP__c</fullName>
        <label>Business ZIP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_category__c</fullName>
        <label>Business category</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive - Body Repair, Collision, Painting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Brake and Muffler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - General Repair, Truck, RV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Parts, Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Quick Sevice, Lube, Tune-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Tire, Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book and Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Category - Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing - Shoe Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer-Related Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drycleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eyewear and Optical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Convenience &amp; Variety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Deli, Meat, Seafood, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Grocery Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Wear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf - Stores, Driving Ranges, Country Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair &amp; Nail Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel &amp; Motel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_currently_not_in_good_standing__c</fullName>
        <label>Business currently not in good standing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_is_a_sole_proprietor__c</fullName>
        <label>Business is a sole proprietor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Casino_Credit_Inquiry__c</fullName>
        <label>Casino Credit Inquiry</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_back_rate_1__c</fullName>
        <label>Charge-back rate &gt;1%</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_offs_in_the_last_3_months__c</fullName>
        <label>Charge offs in the last 3 months</label>
        <picklist>
            <picklistValues>
                <fullName>$1,000 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,00 to $`15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$15,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Support_Past_Due_1k__c</fullName>
        <label>Child Support Past Due &gt;$1k</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_durring_Renovation__c</fullName>
        <label>Closed durring Renovation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection_Accounts__c</fullName>
        <label>Collection Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>$1k-$5k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5k-$10k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10k-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Credit_Counseling_CCCS__c</fullName>
        <label>Consumer Credit Counseling (CCCS)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delinquent_Rent_Lease_Payments__c</fullName>
        <label>Delinquent Rent/Lease Payments</label>
        <picklist>
            <picklistValues>
                <fullName>60-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 day+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delinquent_With_Vendors__c</fullName>
        <label>Delinquent With Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FICO_score_500__c</fullName>
        <label>FICO score &lt; 500</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FRAUD_Misrepresentation__c</fullName>
        <label>FRAUD Misrepresentation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIGH_RISKBusiness_Tender_Shift__c</fullName>
        <label>HIGH RISKBusiness Tender Shift</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIGH_RISK_Business_For_Sale__c</fullName>
        <label>HIGH RISK Business For Sale</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIGH_RISK_Business_Prohibited_List__c</fullName>
        <label>HIGH RISK Business (Prohibited List)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HIGH_RISK_Business_Restricted_List__c</fullName>
        <label>HIGH RISK Business (Restricted List)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installment_Debt_Currently_Past_Due__c</fullName>
        <label>Installment Debt Currently Past Due</label>
        <picklist>
            <picklistValues>
                <fullName>$1k-$5k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5k-$10k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10k-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insufficient_Active_Credit_References__c</fullName>
        <label>Insufficient Active Credit References</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Underwriting_Notes__c</fullName>
        <label>Internal Underwriting Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Judgements_Open__c</fullName>
        <label>Judgements Open</label>
        <picklist>
            <picklistValues>
                <fullName>$5k-$15k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15-$30k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Rent_is_currently_past_due__c</fullName>
        <label>Lease/Rent is currently past due</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mortgage_Currently__c</fullName>
        <label>Mortgage Currently</label>
        <picklist>
            <picklistValues>
                <fullName>60-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure/Forbearance &lt; 1yr out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Due_With_Franchise_Dues__c</fullName>
        <label>Past Due With Franchise Dues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_advance_is_for_Payroll__c</fullName>
        <label>Purpose of advance is for Payroll</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_advance_is_for_Taxes__c</fullName>
        <label>Purpose of advance is for Taxes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repossessions_6_months__c</fullName>
        <label>Repossessions &lt;6 months</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revolving_Debt_Currently_Past_Due__c</fullName>
        <label>Revolving Debt Currently Past Due</label>
        <picklist>
            <picklistValues>
                <fullName>$1k-$5k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5k-$10k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10k-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Split_is_40__c</fullName>
        <label>Split is &gt;= 40%</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Judgements_5000_in_last_6_mo__c</fullName>
        <label>Tax Liens/Judgements&gt;=$5000 in last 6 mo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Judgment_on_Business__c</fullName>
        <label>Tax Liens/Judgment on Business</label>
        <picklist>
            <picklistValues>
                <fullName>$5k-$15k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15k-$30k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Open__c</fullName>
        <label>Tax Liens Open</label>
        <picklist>
            <picklistValues>
                <fullName>$5k-$15k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15k-$30k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unfavorable_Landlord_Reference__c</fullName>
        <label>Unfavorable Landlord Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wage_Garnishment_w_in_the_past_12_month__c</fullName>
        <label>Wage Garnishment w/in the past 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_year_with_current_processor__c</fullName>
        <label>&lt; 1 year with current processor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_years_is_business__c</fullName>
        <label>&lt; 2 years is business</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_years_of_credit_history__c</fullName>
        <label>&lt; 2 years of credit history</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9_months_remaining_on_the_lease__c</fullName>
        <label>&lt; 9 months remaining on the lease</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Credit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>